--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^11.0.0",
+    "mysql2": "^3.15.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
